# rust-in-one-week

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: SELF_HOSTED_RUNNER_SETUP.md
.github/scripts/: init.ps1  runner.ps1  verify-cluster.ps1  verify-windows-features.ps1
.github/workflows/: ci.yml  cluster-tests.yml  integration-tests.yml
OTel/: Cargo.toml
OTel/src/: main.rs
api/: Cargo.toml  README.md  config.toml.example
api/scripts/: Install-Service.ps1
api/src/: config.rs  dto.rs  lib.rs  main.rs  response.rs  routes.rs  service.rs
api/src/handlers/: cluster.rs  hyperv.rs  mod.rs
api/tests/: integration_tests.rs
basics/: README.md
basics/src/: big_number.rs  main.rs
clus/: Cargo.toml  README.md
clus/examples/: csv_info.rs  list_cluster.rs  move_vm.rs
clus/src/: cluster.rs  csv.rs  error.rs  group.rs  lib.rs  node.rs  resource.rs  utils.rs
clus/tests/: integration_tests.rs
cmd/: Cargo.toml  README.md
cmd/src/: main.rs  my.rs
cmd/src/lib/: math.rs
cmd/src/lib/math/: gcd.rs
cmd/src/math/: mod.rs
hello-rust/: Cargo.toml  README.md
hello-rust/src/: gcd.rs  main.rs  person.rs
hello-rust/tests/: person_test.rs
hv/: Cargo.toml  README.md
hv/examples/: create_vm.rs  debug_add_scsi.rs  debug_resources.rs  debug_scsi.rs  debug_vhd.rs  gpu_info.rs  gpu_passthrough.rs  list_vms.rs  quick_vm.rs  vm_lifecycle.rs  wmi_vms.rs
hv/src/: disk.rs  error.rs  gpu.rs  hcs.rs  hyperv.rs  hyperv_wmi.rs  lib.rs  snapshot.rs  switch.rs  vhd.rs  vm.rs
hv/src/wmi/: mod.rs  msvm.rs  operations.rs
hv/tests/: integration_tests.rs
hyperv/: Cargo.toml  IMPLEMENTATION_PLAN.md
hyperv/examples/: checkpoints.rs  create_vm.rs  export_import.rs  full_vm_setup.rs  list_vms.rs
hyperv/src/: error.rs  hyperv.rs  lib.rs
hyperv/src/checkpoint/: mod.rs
hyperv/src/gpu/: dda.rs  mod.rs  partition.rs  types.rs
hyperv/src/network/: adapter.rs  mod.rs  switch.rs
hyperv/src/processor/: mod.rs  settings.rs  topology.rs  types.rs
hyperv/src/security/: mod.rs  settings.rs  types.rs
hyperv/src/storage/: mod.rs  vhd.rs
hyperv/src/validation/: capabilities.rs  mod.rs  property.rs
hyperv/src/vm/: computer_system.rs  mod.rs  settings.rs  state.rs  types.rs
hyperv/src/wmi/: connection.rs  job.rs  mod.rs  variant.rs
hyperv/tests/: integration_tests.rs
mandelbrot/: Cargo.toml  README.md
mandelbrot/src/: lib.rs  library.rs  main.rs
mandelbrot/src/lib/: mandelbrot.rs
quick-replace/: Cargo.toml  README.md
quick-replace/src/: args.rs  main.rs
seesaw/: Cargo.toml  README.md
seesaw/src/: main.rs  seesaw.rs
seesaw/src/seesaw/: group.rs  island.rs  person.rs  traits.rs
use-mod/: Cargo.toml  README.md
use-mod/math/: Cargo.toml
use-mod/math/src/: lib.rs  numbers.rs  operations.rs
use-mod/src/: main.rs  parent_folder.rs
use-mod/src/parent_folder/folder1/: mymodule.rs
web-with-prometheus/: Cargo.toml  README.md
web-with-prometheus/src/: main.rs
