[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = { version = "4.8.0", features = ["openssl"] }
actix-web-httpauth = "0.8.2"
chrono = {  version = "0.4.38", features = ["serde"] }
config = "0.14.0"
env_logger = "0.11.5"
openssl = "0.10.66"
openssl-sys = "0.9.103"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = {  version = "0.23.12" }
serde = {  version = "1.0.204", features = ["derive", "serde_derive"] }
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["v4"] }
