[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
math = { version = "0.1.0", path = "../use-mod/math" }
